# open_vins

./: .gitignore
config/euroc_mav/: estimator_config.yaml
config/msdmg/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
config/msdmi/: kalibr_imucam_chain.yaml
ov_msckf/: CMakeLists.txt
ov_msckf/cmake/: vit.map
ov_msckf/launch/: subscribe.launch.py
ov_msckf/src/vit/: .clang-format  .clang-tidy  README.md  vit_implementation_helper.hpp  vit_interface.h  vit_tracker.cpp  vit_tracker.hpp
ov_msckf/src/vit/moodycamel/: README.md
